--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 /* =========================
    Global Variables
@@ -156,7 +154,7 @@ body {
 }
 
 .nav-link::after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -339,7 +337,7 @@ body {
 }
 
 .nav-link::after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -516,7 +514,7 @@ body {
 }
 
 .nav-link::after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -699,7 +697,7 @@ body {
 }
 
 .nav-link::after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -738,7 +736,6 @@ footer a {
 footer a:hover {
   color: var(--primary-medium); /* Change color on hover */
 }
-
 
 /* Grid Layout for Sections */
 .grid {
@@ -1364,7 +1361,6 @@ button[title="Delete Employee"]:hover {
   .navigation-button {
     padding: 0.5rem 1rem;
     font-size: 0.875rem;
-
   }
 }
 
@@ -1636,4 +1632,3 @@ button[title="Delete Employee"]:hover {
 .sidebar nav .button span {
   font-size: 1.5rem;
 }
-
