fixed functions that broke -invite email -removed created_at field -truck[id] -wage and role admin only -handling autofill -creating event assign truck error -requests admin verification -quick actions button admin verification

--- a/app/globals.css
+++ b/app/globals.css
@@ -2506,3 +2506,30 @@ button[title="Delete Employee"]:hover {
 .nav-link-hidden {
   display: none !important;
 }
+
+/* Add autofill detection CSS */
+@keyframes onAutoFillStart {
+  from {
+    /**/
+  }
+  to {
+    /**/
+  }
+}
+
+@keyframes onAutoFillCancel {
+  from {
+    /**/
+  }
+  to {
+    /**/
+  }
+}
+
+input:-webkit-autofill {
+  animation-name: onAutoFillStart;
+}
+
+input:not(:-webkit-autofill) {
+  animation-name: onAutoFillCancel;
+}
