--- a/app/globals.css
+++ b/app/globals.css
@@ -995,7 +995,7 @@ footer a:hover {
   height: calc(100vh - 80px);
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   position: sticky;
   top: 80px;
   left: 0;
@@ -1005,12 +1005,12 @@ footer a:hover {
 }
 
 .sidebar-content {
-  padding: 2.5rem;
+  padding: 1rem;
   overflow: hidden;
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .sidebar h3 {
@@ -1047,7 +1047,7 @@ footer a:hover {
   }
 
   .sidebar-content {
-    padding: 1.25rem;
+    padding: 0.75rem;
   }
 }
 
